--- a/Capstone/src/MainProgram.form
+++ b/Capstone/src/MainProgram.form
@@ -2,7 +2,7 @@
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="MainProgram">
   <grid id="27dc6" binding="panelMain" layout-manager="BorderLayout" hgap="0" vgap="0">
     <constraints>
-      <xy x="3" y="5" width="651" height="554"/>
+      <xy x="3" y="5" width="673" height="554"/>
     </constraints>
     <properties>
       <enabled value="false"/>
@@ -74,7 +74,7 @@
               <font size="18"/>
               <foreground color="-1"/>
               <opaque value="false"/>
-              <text value="Suppliers"/>
+              <text value="Inventory"/>
               <verifyInputWhenFocusTarget value="true"/>
               <visible value="true"/>
             </properties>
@@ -156,6 +156,13 @@
             </constraints>
           </vspacer>
         </children>
+      </grid>
+      <grid id="6a4f9" binding="MainContentPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
+        <constraints border-constraint="Center"/>
+        <properties/>
+        <border type="none"/>
+        <children/>
       </grid>
     </children>
   </grid>
