--- a/Capstone/src/TransactionsPanel.form
+++ b/Capstone/src/TransactionsPanel.form
@@ -1,54 +1,63 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="TransactionsPanel">
-  <grid id="27dc6" binding="contentPane" layout-manager="GridLayoutManager" row-count="3" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="0" left="0" bottom="0" right="0"/>
+  <grid id="27dc6" binding="contentPane" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+    <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="20" y="20" width="502" height="402"/>
+      <xy x="20" y="20" width="589" height="402"/>
     </constraints>
     <properties>
       <preferredSize width="600" height="450"/>
     </properties>
     <border type="none"/>
     <children>
-      <component id="48a7f" class="javax.swing.JTextField" binding="transactionTextField">
+      <component id="3e662" class="javax.swing.JLabel">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="1" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
+          <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <editable value="false"/>
           <font size="28" style="1"/>
-          <text value="Transactions"/>
+          <text value="Transaction"/>
         </properties>
       </component>
-      <component id="b91bf" class="javax.swing.JTextField" binding="transactionHistoryTextField" default-binding="true">
+      <component id="ea23a" class="javax.swing.JLabel">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="1" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Transaction History"/>
         </properties>
       </component>
-      <scrollpane id="f9f9d">
+      <scrollpane id="f9f9d" binding="scroll">
         <constraints>
-          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="1" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-16777216"/>
+          <visible value="true"/>
+          <wheelScrollingEnabled value="true"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="9caa3" class="javax.swing.JTable" binding="table1" default-binding="true">
             <constraints/>
             <properties>
-              <autoCreateRowSorter value="false"/>
+              <autoCreateRowSorter value="true"/>
               <autoResizeMode value="2"/>
               <intercellSpacing width="1" height="1"/>
             </properties>
           </component>
         </children>
       </scrollpane>
+      <component id="87105" class="javax.swing.JTextField" binding="searchTextField" default-binding="true">
+        <constraints>
+          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties>
+          <text value="Search"/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
